kubernetes-manifests/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: myapi
  ports:
  - port: 8080
    targetPort: 8080
