kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
  - host: nemne-local.com
    http:
      paths:
      - pathType: Prefix
        path: /api/v1
        backend:
          service:
            name: api-service
            port: 
              number: 8080
  - host: abc.sample.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: inference-service
            port:
              number: 5000
